# jcx

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  nuitka.conf  pyproject.toml  ruff.toml  shell_name.tmp
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-foundation-repair/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-security-robustness/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-quality-infrastructure/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-type-safety-documentation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/quick/1-pydantic-v2-frozenmodel/: 1-CONTEXT.md  1-PLAN.md  1-SUMMARY.md
.planning/quick/2-fix-failed-tests/: 2-CONTEXT.md  2-PLAN.md  2-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
jcx/api/: command.py  config.py  dao_item.py  dao_list.py
jcx/data/: split.py
jcx/db/: ivariant.py  precord.py
jcx/db/jdb/: table.py  util.py  variant.py
jcx/db/rdb/: counter.py  db.py
jcx/m/: number.py  trace.py
jcx/net/mqtt/: publisher.py  subscriber.py
jcx/rs/: proto.py
jcx/sys/: fs.py
jcx/text/: io.py  txt_json.py
jcx/time/: calendar_type.py  clock_time.py
jcx/util/: algo.py  err.py  lict.py
src/jcx/api/: _dao_item.py  _dao_list.py  command.py  config.py  dao_client.py  dao_list_client.py
src/jcx/db/: counter.py  record.py
src/jcx/m/: __init__.py  average_meter.py  rand.py  trace.py
src/jcx/rs/: __init__.py  enum.py  proto.py  rs.py
src/jcx/sys/: fs.py  os_pkg.py
src/jcx/text/: io.py  txt_json.py  txt_json5.py
src/jcx/time/: calendar_type.py  clock_time.py  count_timer.py  dt_util.py  stop_watch.py  timer.py
src/jcx/ui/: progress_meter.py
src/jcx/util/: algo.py  array.py  err.py  lict.py  logging_config.py  (+3 more)
tests/: conftest.py  data_types.py
tests/api/: test_dao_list_client.py
tests/db/: test_misc.py
tests/m/: enum_test.py  fun_test.py  number_test.py  rand_test.py
tests/net/: publisher_test.py  subscriber_test.py
tests/rs/: enum_test.py  rs_test.py
tests/sys/: fs_test.py
tests/text/: io_test.py  txt_json_test.py
tests/time/: calendar_type_test.py  clock_time_test.py  count_timer_test.py  dt_test.py  dt_util_test.py  stop_watch_test.py  timer_test.py
tests/util/: algo_test.py  lict_test.py  oo_test.py  test_logging_config.py
(+21 files in other folders)
