[project]
name = "jcx"
version = "0.5.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dayn9t", email = "dayn9t@gmail.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "rustshed",
    "pydantic",
    "pydantic-extra-types",
    "typer",
    "arrow",
    "loguru",

    "paho-mqtt",
    "types-paho-mqtt",
    "parse",
    "redis",
    "requests",
    "sh",
    "interval",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
cx_rename = "jcx.bin.cx_rename:main"
cx_task = "jcx.bin.cx_task:main"
cx_dao = "jcx.bin.cx_dao:main"
mv_re = "jcx.bin.mv_re:main"
rename_re = "jcx.bin.rename_re:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

