[project]
name = "jcx"
version = "0.5.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dayn9t", email = "dayn9t@gmail.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "rustshed",
    "pydantic",
    "pydantic-extra-types",
    "typer",
    "arrow",
    "loguru",
    "paho-mqtt",
    "types-paho-mqtt",
    "parse",
    "redis",
    "requests",
    "sh",
    "interval",
    "numpy",
    "pyjson5",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
cx_rename = "jcx.bin.cx_rename:main"
cx_task = "jcx.bin.cx_task:main"
cx_dao = "jcx.bin.cx_dao:main"
mv_re = "jcx.bin.mv_re:main"
rename_re = "jcx.bin.rename_re:main"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

