[project]
name = "jcx"
version = "0.5.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dayn9t", email = "dayn9t@gmail.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "rustshed",
    "pydantic",
    "pydantic-extra-types",
    "typer",
    "arrow",
    "loguru",
    "paho-mqtt",
    "parse",
    "redis",
    "requests",
    "sh",
    "interval",
    "numpy",
    "pyjson5",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.5",
    "json5>=0.13.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest",
    "pytest-cov>=7.1.0",
]

[project.scripts]
cx_rename = "jcx.bin.cx_rename:main"
cx_task = "jcx.bin.cx_task:main"
cx_dao = "jcx.bin.cx_dao:main"
mv_re = "jcx.bin.mv_re:main"
rename_re = "jcx.bin.rename_re:main"

[tool.pytest.ini_options]
addopts = "-m 'not integration' --cov=jcx --cov-report=term-missing --cov-report=html"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["jcx"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

